--- a/style.css
+++ b/style.css
@@ -28,17 +28,18 @@
   
   p {
     font-size: 2rem;
-    color: #FFDFF3;
+    color: #FFFD96;
     font-family: 'Montserrat', sans-serif;
   }
   
   img {
     width: 100%;
+    height:214px;
   }
   
   footer {
     margin-top: 5%;
-    color: #EEEEEE;
+    color: #FFFD96;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
   
